<resources>
    <string name="app_name">room</string>
    <string name="discover">Discover innovative ways to decorate</string>
    <string name="we">We provide unmatched quality, comfort, and style for property owners across the country
    .Our experts combine form and function in bringing your vision to life.
    Create a room in your own style with our collection and make your property
    a reflection of you and what you love.</string>
    <string name="shop">SHOP NOW</string>
    <string name="about">ABOUT OUR FURNITURE</string>
    <string name="our">Our multifunctional collection blends design and function to
    suit your individual taste. Make each room unique, or pick a cohesive theme that best
    express your interests and what inspires you. Find the furniture pieces you need, from
    traditional to contemporary styles or anything in between. Product specialists are
    available to help you create your dream space</string>

    <string name="are">We are available all across the globe</string>
    <string name="with">With stores all over the world, it\'s easy for you to find furniture for your
    home or place of business. Locally, we\'re in most major cities throughout the country. Find the branch nearest you using our store locator.
    Any questions? Don\'t hesitate to contact us today.</string>
    <string name="manufacutured">Manufactured with the best materials</string>
    <string name="modern">Our modern furniture store provide a high level of quality. Our
    company has invested in advanced technology to ensure that every product is made as perfect and
    as consistent as posible. With three decades of experience in industry, we understand what customers want for
    their home and office</string>
</resources>