<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:src="@drawable/right_true"
                android:id="@+id/right"
                android:visibility="gone"/>

            <ImageView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:src="@drawable/left_true"
                android:id="@+id/left"
                android:visibility="gone"/>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/hero1"
                android:scaleType="fitXY"
                android:src="@drawable/mobile_image_hero_1"/>

            <ImageView
                android:layout_width="66dp"
                android:layout_height="16dp"
                android:src="@drawable/logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="46dp"
                android:id="@+id/logo"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_hamburger"
                android:background="@drawable/icon_hamburger"
                android:layout_marginTop="46dp"
                android:layout_marginStart="20dp"
                android:id="@+id/hamburger" />


            <RelativeLayout
                android:id="@+id/relAngle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/hero1"
                android:layout_alignParentEnd="true">

                <ImageButton
                    android:id="@+id/angleLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:padding="20dp"
                    android:src="@drawable/icon_angle_left"
                    />

                <ImageButton
                    android:id="@+id/angleRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/angleLeft"
                    android:background="@color/black"
                    android:padding="20dp"
                    android:src="@drawable/icon_angle_right"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hero1"
                android:layout_margin="30dp"
                android:id="@+id/Reldis">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/discover"
                    android:id="@+id/discover"
                    android:layout_marginTop="30dp"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/spartan_variable_fontweight"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/we"
                    android:layout_below="@id/discover"
                    android:layout_marginTop="25dp"
                    android:id="@+id/we"
                    android:fontFamily="@font/spartan_variable_fontweight"/>

                <Button
                    android:id="@+id/shop"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/we"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="40dp"
                    android:gravity="fill_horizontal"
                    android:paddingEnd="50dp"
                    android:text="@string/shop"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

                <ImageView
                    android:id="@+id/arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/we"
                    android:layout_marginTop="70dp"
                    android:layout_toEndOf="@+id/shop"
                    android:src="@drawable/icon_arrow" />

            </RelativeLayout>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/image_about_dark"
                android:layout_below="@id/Reldis"
                android:id="@+id/dark"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dark"
                android:layout_margin="30dp"
                android:id="@+id/Relabout">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:id="@+id/about"
                    android:layout_marginTop="30dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/our"
                    android:id="@+id/our"
                    android:layout_below="@id/about"
                    android:layout_marginTop="25dp"
                    />

            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/image_about_light"
                android:layout_below="@+id/Relabout"
                android:id="@+id/light"/>


        </RelativeLayout>

    </ScrollView>



</RelativeLayout>